syntax = "proto3";

package code;

option go_package = "code/proto;proto";

service KVService {
  rpc Prepare(PrepareRequest) returns (Ack);
  rpc Commit(CommitRequest) returns (Ack);
  rpc Abort(AbortRequest) returns (Ack);
  rpc Get(GetRequest) returns (ValueReply);
  rpc Set(SetRequest) returns (Ack);
  rpc QueryTxnStatus(QueryTxnRequest) returns (QueryTxnReply);
}
message QueryTxnRequest {
  string txn_id = 1;
}

message QueryTxnReply {
  string status = 1; // "PREPARED", "COMMITTED", or "UNKNOWN"
}

message PrepareRequest {
  string txn_id = 1;
  string key = 2;
  string value = 3;
  string operation = 4;
}

message CommitRequest {
  string txn_id = 1;
}

message AbortRequest {
  string txn_id = 1;
}

message GetRequest {
  string key = 1;
}

message SetRequest {
  string key = 1;
  string value = 2;
}

message ValueReply {
  string value = 1;
}

message Ack {
  bool success = 1;
}
